apps/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      targetPort: 8686
