apps/lidarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-secure-headers@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lidarr.greiner.home
      secretName: lidarr-tls
  rules:
    - host: lidarr.greiner.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
